--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,16 @@
   "description": "See your UnFootprint results now",
   "content_security_policy": "script-src https://unfootprint.com/ 'self'; object-src 'self'",
   "browser_action": {
-    "default_icon": "favicon.png",
+    "default_icon": "assets/favicon-32x32.png",
     "default_title": "UnFootprint"
   },
+  "options_ui": {
+    "page": "options.html",
+    "open_in_tab": false
+  },
   "permissions": [
-    "cookies"
+    "cookies",
+    "storage"
   ],
   "chrome_url_overrides" : {
     "newtab": "index.html"
